:hammer: Improve unshift on add process

--- a/src/app/main/pages/quality/configurations/configurations.component.scss
+++ b/src/app/main/pages/quality/configurations/configurations.component.scss
@@ -186,7 +186,7 @@ table {
     }
     &--btn {
       max-width: 150px;
-      margin-left: auto;
+    //   margin-left: auto;
       background: #6200ee;
       color: white;
       margin-top: 20px;
