--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -1,128 +1,77 @@
 <div class="container">
-  <div class="ms-kanban-toolbar mat-elevation-z4">
-    <mat-form-field
-      appearance="outline"
-      class="ms-kanban-toolbar__input"
-      [ngClass]="
+    <div class="ms-kanban-toolbar mat-elevation-z4">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="
         isMobile
           ? 'ms-kanban-toolbar__input--mobile'
           : 'ms-kanban-toolbar__input--desktop'
-      "
-      matTooltip="Tipo de evento"
-      matTooltipPosition="above"
-    >
-      <mat-icon matPrefix>location_on</mat-icon>
-      <mat-select [formControl]="eventTypeControl">
-        <mat-option value="">Todos</mat-option>
-        <mat-option *ngFor="let item of eventType" [value]="item.code">
-          {{ item.event }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      " matTooltip="Tipo de evento" matTooltipPosition="above">
+            <mat-icon matPrefix>location_on</mat-icon>
+            <mat-select [formControl]="eventTypeControl">
+                <mat-option value="">Todos</mat-option>
+                <mat-option *ngFor="let item of eventType" [value]="item.code">
+                    {{ item.event }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-    <mat-form-field
-      appearance="outline"
-      class="ms-kanban-toolbar__input"
-      [ngClass]="
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="
         isMobile
           ? 'ms-kanban-toolbar__input--mobile'
           : 'ms-kanban-toolbar__input--desktop'
-      "
-      matTooltip="Taller que reporta"
-      matTooltipPosition="above"
-    >
-      <mat-icon matPrefix>report</mat-icon>
-      <mat-select [formControl]="reportingWorkshopControl">
-        <mat-option value="">Todos</mat-option>
-        <mat-option
-          *ngFor="let workshop of reportingWorkshopList$ | async"
-          [value]="workshop"
-        >
-          {{ workshop.workshopName }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      " matTooltip="Taller que reporta" matTooltipPosition="above">
+            <mat-icon matPrefix>report</mat-icon>
+            <mat-select [formControl]="reportingWorkshopControl">
+                <mat-option value="">Todos</mat-option>
+                <mat-option *ngFor="let workshop of reportingWorkshopList$ | async" [value]="workshop">
+                    {{ workshop.workshopName }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-    <mat-form-field
-      appearance="outline"
-      class="ms-kanban-toolbar__input"
-      [ngClass]="
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="
         isMobile
           ? 'ms-kanban-toolbar__input--mobile'
           : 'ms-kanban-toolbar__input--desktop'
-      "
-      matTooltip="Taller responsable"
-      matTooltipPosition="above"
-    >
-      <mat-icon matPrefix>home_repair_service</mat-icon>
-      <mat-select [formControl]="responsibleWorkshopControl">
-        <mat-option value="">Todos</mat-option>
-        <mat-option
-          *ngFor="let workshop of responsibleWorkshopList$ | async"
-          [value]="workshop"
-        >
-          {{ workshop.name }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      " matTooltip="Taller responsable" matTooltipPosition="above">
+            <mat-icon matPrefix>home_repair_service</mat-icon>
+            <mat-select [formControl]="responsibleWorkshopControl">
+                <mat-option value="">Todos</mat-option>
+                <mat-option *ngFor="let workshop of responsibleWorkshopList$ | async" [value]="workshop">
+                    {{ workshop.name }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-    <mat-form-field
-      appearance="outline"
-      class="ms-kanban-toolbar__input"
-      [ngClass]="
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input" [ngClass]="
         isMobile
           ? 'ms-kanban-toolbar__input--mobile'
           : 'ms-kanban-toolbar__input--desktop'
-      "
-    >
-      <mat-icon matPrefix>search</mat-icon>
-      <input
-        matInput
-        type="text"
-        [formControl]="searchControl"
-        placeholder="Escribir"
-        autocomplete="off"
-      />
-    </mat-form-field>
-    <span class="ms-fill"></span>
-    <div class="ms-kanban-toolbar__counter">
-      {{ counter | number: "2." }}
-    </div>
-    <button
-      mat-icon-button
-      class="ms-kanban-toolbar__button--icon"
-      (click)="settingDialog()"
-      *ngIf="
+      ">
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="text" [formControl]="searchControl" placeholder="Escribir" autocomplete="off" />
+        </mat-form-field>
+        <span class="ms-fill"></span>
+        <div class="ms-kanban-toolbar__counter">
+            {{ counter | number: "2." }}
+        </div>
+        <button mat-icon-button class="ms-kanban-toolbar__button--icon" (click)="settingDialog()" *ngIf="
         authService.uiConfig.quality.analysis.tabs.process.toolbar.configuration
-      "
-    >
+      ">
       <mat-icon>settings</mat-icon>
     </button>
-  </div>
+    </div>
 
-  <div
-    class="cards-container"
-    *ngIf="quality$ | async as evaluations; else default"
-  >
-    <div
-      *ngFor="let item of evaluations"
-      class="mat-elevation-z4"
-      style="display: flex; flex-direction: column; width: 230px"
-    >
-      <div class="box">
-        <div class="header-box">
-          <div
-            [ngClass]="{
+    <div class="cards-container" *ngIf="quality$ | async as evaluations; else default">
+        <div *ngFor="let item of evaluations" class="mat-elevation-z4" style="display: flex; flex-direction: column; width: 230px">
+            <div class="box">
+                <div class="header-box">
+                    <div [ngClass]="{
               'btn-event-internal': item.eventType === 'Interno',
               'btn-event-external': item.eventType === 'Externo'
-            }"
-            matTooltip="Tipo de evento"
-            matTooltipPosition="above"
-          >
-            {{ item.eventType }}
-          </div>
-          <div
-            [ngClass]="{
+            }" matTooltip="Tipo de evento" matTooltipPosition="above">
+                        {{ item.eventType }}
+                    </div>
+                    <div [ngClass]="{
               'btn-result-1':
                 item.evaluationAnalisis > 0 && item.evaluationAnalisis < 5,
               'btn-result-2':
@@ -131,35 +80,24 @@
                 item.evaluationAnalisis > 9 && item.evaluationAnalisis < 20,
               'btn-result-4':
                 item.evaluationAnalisis > 19 && item.evaluationAnalisis < 26
-            }"
-            matTooltip="Nivel de riesgo"
-            matTooltipPosition="above"
-          >
-            {{ item.evaluationAnalisis }}
-          </div>
-          <div>
-            <mat-menu #requestsMenu="matMenu">
-              <button
-                mat-menu-item
-                *ngIf="
+            }" matTooltip="Nivel de riesgo" matTooltipPosition="above">
+                        {{ item.evaluationAnalisis }}
+                    </div>
+                    <div>
+                        <mat-menu #requestsMenu="matMenu">
+                            <button mat-menu-item *ngIf="
                   authService.uiConfig.quality.analysis.tabs.process.actions
                     .details
-                "
-                (click)="detailDialog(item, item.eventType)"
-              >
+                " (click)="detailDialog(item, item.eventType)">
                 <mat-icon>visibility</mat-icon> Detalle
               </button>
-              <button
-                mat-menu-item
-                *ngIf="
+                            <button mat-menu-item *ngIf="
                   authService.uiConfig.quality.analysis.tabs.process.actions
                     .analysis
-                "
-                (click)="analysis(item)"
-              >
+                " (click)="analysis(item)">
                 <mat-icon>add_task</mat-icon> Análisis
               </button>
-              <button
+                            <!-- <button
                 mat-menu-item
                 *ngIf="
                   authService.uiConfig.quality.analysis.tabs.process.actions
@@ -168,45 +106,41 @@
                 (click)="printPdf(item)"
               >
                 <mat-icon>picture_as_pdf</mat-icon> Reporte
-              </button>
-              <button
-                mat-menu-item
-                *ngIf="
+              </button> -->
+                            <button mat-menu-item *ngIf="
                   authService.uiConfig.quality.analysis.tabs.process.actions
                     .timeLine
-                "
-                (click)="timeline(item)"
-              >
+                " (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
               </button>
-            </mat-menu>
-            <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
+                        </mat-menu>
+                        <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
               <mat-icon>more_vert</mat-icon>
             </button>
-          </div>
-        </div>
-        <div class="info-box">
-          <div class="lj">
-            <span>OT {{ item.workOrder }}</span>
-          </div>
-          <div class="info-row">
-            Componente: <span> {{ item.component }}</span>
-          </div>
-          <div *ngIf="item.workShop" class="info-row">
-            Taller: <span> {{ item.workShop ? item.workShop : "-" }}</span>
-          </div>
-          <div *ngIf="item.miningOperation" class="info-row">
-            Operación minera:
-            <span>
+                    </div>
+                </div>
+                <div class="info-box">
+                    <div class="lj">
+                        <span>OT {{ item.workOrder }}</span>
+                    </div>
+                    <div class="info-row">
+                        Componente: <span> {{ item.component }}</span>
+                    </div>
+                    <div *ngIf="item.workShop" class="info-row">
+                        Taller: <span> {{ item.workShop ? item.workShop : "-" }}</span>
+                    </div>
+                    <div *ngIf="item.miningOperation" class="info-row">
+                        Operación minera:
+                        <span>
               {{ item.miningOperation ? item.miningOperation : "-" }}</span
             >
           </div>
           <div class="info-row">
             Especialista: <span> {{ item.specialist["name"] }}</span>
-          </div>
-          <div class="info-row">
-            Fecha:
-            <span>
+                    </div>
+                    <div class="info-row">
+                        Fecha:
+                        <span>
               {{
                 item.createdAt["seconds"] * 1000
                   | date: "dd/MM/yy
