--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -169,7 +169,11 @@
         </p>
         <p class="analysis-result">
           <span> Causante de falla:</span>
-          {{ data.analysis ? data.analysis["causeFailure"] : "-" }}
+          {{ data.analysis ? data.analysis.causeFailure : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Causa Básica:</span>
+          {{ data.analysis ? data.analysis.causeBasic : "-" }}
         </p>
         <p class="analysis-result">
           <span> Proceso:</span>
@@ -177,7 +181,21 @@
         </p>
         <p class="analysis-result">
           <span> Observación:</span>
-          {{ data.analysis ? data.analysis["observation"] : "-" }}
+          {{ data.analysis ? data.analysis.observation : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Responsable:</span>
+          {{ data.analysis ? data.analysis.responsable : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Bahia:</span>
+          {{ data.analysis ? data.analysis.bahia: "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> URL imágenes: </span>
+          <a [href]="data.analysis.URLimage" target="_blank" >
+            {{ data.analysis ? data.analysis.URLimage : "-" }}
+          </a>
         </p>
 
         <ng-container *ngIf="data.correctiveActions">
