--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -167,7 +167,7 @@
           }}
         </p>
         <p class="analysis-result">
-          <span> Causante de falla:</span>
+          <span> Causa inmediata:</span>
           {{ data.analysis ? data.analysis["causeFailure"] : "-" }}
         </p>
         <p class="analysis-result">
