--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -14,17 +14,17 @@
     <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
     <mat-dialog-content style=" margin-top: 20px;">
         <div class="details">
-            <p><span style="font-weight: bold;"> OT Actual :</span> {{data.workOrder ? data.workOrder : ''}}</p>
-            <p><span style="font-weight: bold;"> Componente :</span> {{data.component ? data.component : ''}}</p>
+            <p><span style="font-weight: bold;"> OT Actual :</span> {{data.workOrder ? data.workOrder : '---'}}</p>
+            <p><span style="font-weight: bold;"> Componente :</span> {{data.component ? data.component : '---'}}</p>
             <p><span style="font-weight: bold;"> Número de paqueteo :</span> {{data.packageNumber ? data.packageNumber :
-                ''}}
+                '---'}}
             </p>
             <p><span style="font-weight: bold;"> Horómetro de componente :</span> {{data.componentHourMeter ?
-                data.componentHourMeter : ''}}</p>
-            <p><span style="font-weight: bold;"> Número de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
-            <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType ? data.eventType : ''}} </p>
-            <p><span style="font-weight: bold;"> Taller que reporta :</span> {{data.reportingWorkshop? data.reportingWorkshop.workshopName : ''}}</p>
-            <p *ngIf="data.eventType==='Interno'"><span style="font-weight: bold;"> Proceso :</span> {{data.reportingWorkshopProcess? data.reportingWorkshopProcess : ''}}</p>
+                data.componentHourMeter : '---'}}</p>
+            <p><span style="font-weight: bold;"> Número de parte :</span> {{data.partNumber ? data.partNumber : '---'}}</p>
+            <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType ? data.eventType : '---'}} </p>
+            <p><span style="font-weight: bold;"> Taller que reporta :</span> {{data.reportingWorkshop? data.reportingWorkshop.workshopName : '---'}}</p>
+            <p *ngIf="data.eventType==='Interno'"><span style="font-weight: bold;"> Proceso :</span> {{data.reportingWorkshopProcess? data.reportingWorkshopProcess : '---'}}</p>
         </div>
 
         <mat-divider style="margin-top:20px; margin-bottom: 20px;"> </mat-divider>
