:hammer: :art: Fixed typos

--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -98,7 +98,7 @@
           }}
         </p>
         <p class="analysis-result">
-          <span> Causante de falla:</span>
+          <span> Causa inmediata:</span>
           {{ data.analysis ? data.analysis.causeFailure : "-" }}
         </p>
         <p class="analysis-result">
@@ -118,7 +118,7 @@
           {{ data.analysis ? data.analysis.responsable : "-" }}
         </p>
         <p class="analysis-result">
-          <span> Bahia:</span>
+          <span> Bahía:</span>
           {{ data.analysis ? data.analysis.bahia: "-" }}
         </p>
         <p class="analysis-result">
