--- a/src/app/main/pages/quality/analysis/tracing/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -169,7 +169,7 @@
           }}
         </p>
         <p class="analysis-result">
-          <span> Causante de falla:</span>
+          <span> Causa inmediata:</span>
           {{ data.analysis ? data.analysis.causeFailure : "-" }}
         </p>
         <p class="analysis-result">
@@ -189,12 +189,14 @@
           {{ data.analysis ? data.analysis.responsable : "-" }}
         </p>
         <p class="analysis-result">
-          <span> Bahia:</span>
+          <span> Bahía:</span>
           {{ data.analysis ? data.analysis.bahia: "-" }}
         </p>
         <p class="analysis-result">
-          <span> URL imágenes:</span>
-          {{ data.analysis ? data.analysis.URLimage : "-" }}
+          <span> URL imágenes: </span>
+          <a [href]="data.analysis.URLimage" target="_blank" >
+            {{ data.analysis ? data.analysis.URLimage : "-" }}
+          </a>
         </p>
 
         <ng-container *ngIf="data.correctiveActions">
