--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -168,7 +168,7 @@
           }}
         </p>
         <p class="analysis-result">
-          <span> Causante de falla:</span>
+          <span> Causa inmediata:</span>
           {{ data.analysis ? data.analysis.causeFailure : "-" }}
         </p>
         <p class="analysis-result">
@@ -188,7 +188,7 @@
           {{ data.analysis ? data.analysis.responsable : "-" }}
         </p>
         <p class="analysis-result">
-          <span> Bahia:</span>
+          <span> Bahía:</span>
           {{ data.analysis ? data.analysis.bahia: "-" }}
         </p>
         <p class="analysis-result">
