--- a/src/app/main/pages/quality/analysis/tracing/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -96,7 +96,7 @@
           }}
         </p>
         <p class="analysis-result">
-          <span> Causante de falla:</span>
+          <span> Causa inmediata:</span>
           {{ data.analysis ? data.analysis.causeFailure : "-" }}
         </p>
         <p class="analysis-result">
@@ -116,7 +116,7 @@
           {{ data.analysis ? data.analysis.responsable : "-" }}
         </p>
         <p class="analysis-result">
-          <span> Bahia:</span>
+          <span> Bahía:</span>
           {{ data.analysis ? data.analysis.bahia: "-" }}
         </p>
         <p class="analysis-result">
