--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.html
@@ -20,8 +20,7 @@
             <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
             <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
             <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
-            <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ?
-                data.createdBy.name : data.createdBy) : 'Sin asignar'}} </p>
+            <p><span style="font-weight: bold;"> Creado por :</span> {{data.createdBy ? (data.createdBy.name ? data.createdBy.name : data.createdBy) : ' --- '}} </p>
             <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
             <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
 
@@ -36,7 +35,6 @@
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-        <button type="button" mat-raised-button color="primary" [disabled]="observationFormGroup.status != 'VALID'"
-            class="footer__btn-save" (click)="save()">GUARDAR</button>
+        <button type="button" mat-raised-button color="primary" [disabled]="observationFormGroup.status != 'VALID'" class="footer__btn-save" (click)="save()">GUARDAR</button>
     </mat-dialog-actions>
 </div>
