🔨 🎨 Update tallest column: Map codes by names

--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-create-dialog/requests-create-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-create-dialog/requests-create-dialog.component.html
@@ -49,7 +49,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Taller</mat-label>
                     <mat-select formControlName="workshop">
-                        <mat-option *ngFor="let item of workshops" [value]="item.code">
+                        <mat-option *ngFor="let item of workshops" [value]="item">
                             {{item.location}}
                         </mat-option>
                     </mat-select>
