--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -123,7 +123,7 @@
 
             <ng-container matColumnDef="workshop">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Taller</th>
-                <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workshop ? element.workshop : '---'}}
+                <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workshop.location ?element.workshop.location:element.workshop? filterWorkshopByCode(element.workshop):'--'}}
                 </td>
             </ng-container>
 
