--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -173,7 +173,11 @@
         </p>
         <p class="analysis-result">
           <span> Causa básica:</span>
-          {{ data.analysis ? data.analysis.causeBasic : "-" }}
+          {{ data.analysis ? data.analysis.basicCause : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Taller responsable:</span>
+          {{ data.workShop ? data.workShop : "-" }}
         </p>
         <p class="analysis-result">
           <span> Proceso:</span>
@@ -189,11 +193,14 @@
         </p>
         <p class="analysis-result">
           <span> Bahía:</span>
-          {{ data.analysis ? data.analysis.bahia: "-" }}
+          {{ data.analysis ? data.analysis.bahia : "-" }}
         </p>
         <p class="analysis-result">
           <span> URL imágenes: </span>
-          <a [href]="data.analysis ? data.analysis.URLimage : ''" target="_blank" >
+          <a
+            [href]="data.analysis ? data.analysis.URLimage : ''"
+            target="_blank"
+          >
             {{ data.analysis ? data.analysis.URLimage : "-" }}
           </a>
         </p>
