--- a/src/app/main/pages/quality/analysis/tracing/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -174,7 +174,11 @@
         </p>
         <p class="analysis-result">
           <span> Causa básica:</span>
-          {{ data.analysis ? data.analysis.causeBasic : "-" }}
+          {{ data.analysis ? data.analysis.basicCause : "-" }}
+        </p>
+        <p class="analysis-result">
+          <span> Taller responsable:</span>
+          {{ data.workShop ? data.workShop : "-" }}
         </p>
         <p class="analysis-result">
           <span> Proceso:</span>
