🔨 Fixed results download

--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -85,7 +85,7 @@
         isMobile
           ? 'ms-kanban-toolbar__button--mobile'
           : 'ms-kanban-toolbar__button--desktop'
-      " (click)="download()">
+      " (click)="download(settingsDataSource.data)">
       <mat-icon matPrefix>download</mat-icon>
       DESCARGAR
     </button>
