:bug: Fixed analysis dialog - save behavior

--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -198,7 +198,7 @@
             "
             appearance="outline"
           >
-            <mat-label>Taller que reporta</mat-label>
+            <mat-label>Taller - Posible responsable</mat-label>
             <input
               autocomplete="off"
               type="text"
